@@ -1,3 +1,8 @@
+2007-10-18  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* library/ttk/fonts.tcl: Create all the tip 145 font names on all
+	platforms (mac and unix get handled in script, windows in C)
+
 2007-10-17  David Gravereaux <davygrvy@pobox.com>
 
 	* bitmaps/*.xbm: Changed CVS storage mode from -kb to -kkv as these
